--- a/index.html
+++ b/index.html
@@ -17,6 +17,27 @@
     <p style="margin-top: 50px;">그리고 <b><u>실업급여</u></b>를 신청하여 약 6개월간 실업급여를 받으면서 생활할 것이다</p>
     <p>ㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋ개꿀~~</p>
     <img src="고삼이.jpg" width="40%"><br>
-    그리고 그 기간동안에는 코딩과 체력단련에만 몰두할 것이다
+    <p>그리고 그 기간동안에는 코딩과 체력단련에만 몰두할 것이다</p>
+    <p>
+        <div id="disqus_thread"></div>
+        <script>
+            /**
+            *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+            *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+            /*
+            var disqus_config = function () {
+            this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+            this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+            };
+            */
+            (function() { // DON'T EDIT BELOW THIS LINE
+            var d = document, s = d.createElement('script');
+            s.src = 'https://web1-kne5qczsmb.disqus.com/embed.js';
+            s.setAttribute('data-timestamp', +new Date());
+            (d.head || d.body).appendChild(s);
+            })();
+        </script>
+        <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    </p>
     </body>
 </html>
